--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -107,3 +107,42 @@ font-size: 16px;
 line-height: 32px;
 text-decoration-line: line-through;
 }
+
+@mixin visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+@mixin button-default {
+  background-color: $base-primary;
+  color: $base-white;
+  padding: 8px 20px;
+
+  &:hover {
+    background-color: $primary-lighter;
+  }
+
+  &:active {
+    background-color: $primary-darker;
+  }
+
+  &:disabled {
+    background-color: $base-gray;
+  }
+}
+
+@mixin button-alt {
+  @extend .button-default;
+  background-color: $base-white;
+  color: $base-primary;
+
+  &:disabled {
+    background-color: $light-gray;
+  }
+}
