--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -96,7 +96,7 @@
 
   @media screen and (max-width: 767px) {
     @include basic-text(center);
-    font-weight: 500px;
+    font-weight: 500;
     font-size: 12px;
     line-height: 16px;
 
