--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -34,13 +34,12 @@ img {
 }
 
 a,
-a:visited,
 button {
   display: inline-block;
   text-decoration: none;
   border: none;
   outline: none;
-  color: inherit;
+  color: unset;
 }
 
 ul {
