add advantages section and track time

--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -10,13 +10,7 @@ swiper-container {
 }
 
 swiper-slide {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  @media screen and (max-width: 767px) {
-    height: 530px;
-  }
+  height: auto;
 }
 
 [data-swiper-slide-index="0"] {
