--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -8,3 +8,5 @@
 @import "./blocks/header.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/advantages.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/form.scss";
