--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -92,7 +92,7 @@
 
 .header__nav-link {
   width: 100%;
-  padding: 20px 0;
+  padding: 22px 0;
 
   @media screen and (max-width: 767px) {
     @include basic-text(center);
@@ -109,12 +109,13 @@
     &:hover,
     &:focus {
       color: $base-primary;
+
     }
 
     &:active {
       color: $base-primary;
       background-color: $base-secondary;
-      border-bottom: 2px solid $base-secondary;
+      @include effect;
     }
   }
 }
@@ -122,7 +123,17 @@
 .header__nav-link--active {
   @media screen and (min-width: 768px) {
     color: $base-primary;
-    border-bottom: 2px solid $base-primary;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 2px;
+      background-color: $base-primary;
+    }
   }
 }
 
@@ -171,8 +182,10 @@
     &:focus,
     &:active {
       color: $base-primary;
+      @include effect;
       &::before {
         background-color: $base-primary;
+        @include effect;
       }
     }
   }
@@ -195,8 +208,10 @@
     &:focus,
     &:active {
       color: $base-primary;
+      @include effect;
       &::before {
         background-color: $base-primary;
+        @include effect;
       }
     }
   }
