--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -1,6 +1,14 @@
 .form {
-  width: 320px;
-  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+
+  gap: 20px;
+
+  @media screen and (min-width: 768px) and (max-width: 1439px) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+  }
 }
 
 .form__filter {
@@ -16,6 +24,10 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
+
+    @media screen and (min-width: 768px) {
+      justify-content: start;
+    }
   }
 }
 
@@ -132,8 +144,7 @@
 .form__price-wrapper {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
-  width: 280px;
+  width: 100%;
 }
 
 .form__price-input {
@@ -145,7 +156,9 @@
   border: 2px solid $primary-lighter;
   border-radius: 4px;
 
-
+@media screen and (min-width: 768px) {
+  width: 90px;
+}
 
   &:focus {
     border: 2px solid $primary-darker;
@@ -302,4 +315,11 @@
   flex-direction: column;
 
   gap: 10px;
+
+  @media screen and (min-width: 768px) and (max-width: 1439px) {
+    grid-column: 1/-1;
+    justify-self: center;
+
+    width: 250px;
+  }
 }
