--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -10,3 +10,5 @@
 @import "./blocks/advantages.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/form.scss";
+@import "./blocks/list.scss";
+@import "./blocks/pagination.scss";
