--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -12,3 +12,5 @@
 @import "./blocks/form.scss";
 @import "./blocks/list.scss";
 @import "./blocks/pagination.scss";
+@import "./blocks/map.scss";
+@import "./blocks/footer.scss";
