--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -21,3 +21,11 @@ $espresso: #e5e6e8;
 
 // Text variables
 $primary-font: "Montserrat", sans-serif;
+
+// media variables
+$desktop-width: 1440px;
+$tablet-width: 768px;
+$mobile-width: 320px;
+
+$max-mobile-width: 767px;
+$max-tablet-width: 1439px;
